fixed image issue overflowing container width

--- a/source/sass/_blogpage.scss
+++ b/source/sass/_blogpage.scss
@@ -171,6 +171,8 @@
 
         img {
             display: block;
+            width: 100%;
+            height: auto;
         }
 
         img + p {
